# velocity_control_ruckig

./: LICENSE  README.md
ros2_ws/: WayPoints_damin0302_pro.txt  exp_config.txt  exp_joint.txt  exp_joint_velocity.txt  input.txt  test_waypoint.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/custom_package/lib/custom_package/: sub_img  tm_send_command
ros2_ws/install/custom_package/share/custom_package/: package.sh
ros2_ws/install/demo/lib/demo/: demo_ask_item  demo_ask_sta  demo_connect_tm  demo_get_feedback  demo_get_sct_response  demo_get_sta_response  demo_get_svr_response  demo_get_torque_feedback  demo_leave_listen_node  demo_send_script  demo_set_event  demo_set_io  demo_set_positions  demo_set_positions_handeye  demo_set_velocity  demo_write_item
ros2_ws/install/demo/share/demo/: package.sh
ros2_ws/install/robot_control/lib/robot_control/: gazebo_control  gazebo_controller  interface  joint2cart  polish_controller  pub_tool0_state  sim_arm_controller
ros2_ws/install/robot_control/share/robot_control/: local_setup.sh  package.sh
ros2_ws/install/techman_robot_msgs/share/techman_robot_msgs/: package.sh
ros2_ws/install/techman_robot_msgs/share/techman_robot_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake
ros2_ws/install/tm_description/share/tm_description/: package.sh  package.xml
ros2_ws/install/tm_description/share/tm_description/urdf/: tm5-900-nominal.urdf
ros2_ws/install/tm_driver/lib/tm_driver/: tm_driver
ros2_ws/install/tm_driver/share/tm_driver/: local_setup.sh  package.sh
ros2_ws/install/tm_driver/share/tm_driver/cmake/: tm_driverConfig.cmake
ros2_ws/install/tm_get_status/lib/tm_get_status/: image_talker  status_talker
ros2_ws/install/tm_get_status/share/tm_get_status/: package.sh
ros2_ws/install/tm_kinematics/include/tm_kinematics/: tm_kin.hpp
ros2_ws/install/tm_kinematics/lib/tm_kinematics/: tm_jacob
ros2_ws/install/tm_kinematics/share/tm_kinematics/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/tm_kinematics/share/tm_kinematics/cmake/: TM_kinematicsExport-noconfig.cmake  TM_kinematicsExport.cmake  ament_cmake_export_targets-extras.cmake  tm_kinematicsConfig.cmake
ros2_ws/install/tm_mod_urdf/lib/tm_mod_urdf/: modify_urdf  modify_xacro
ros2_ws/install/tm_mod_urdf/share/tm_mod_urdf/: package.sh
ros2_ws/install/tm_moveit_config_tm5-900/share/tm_moveit_config_tm5-900/: package.sh  package.xml
ros2_ws/install/tm_moveit_config_tm5-900/share/tm_moveit_config_tm5-900/config/: arm_controller_pos.yaml  kinematics.yaml
ros2_ws/install/tm_moveit_config_tm5-900/share/tm_moveit_config_tm5-900/launch/: load_world_into_gazebo.launch.py
ros2_ws/install/tm_moveit_config_tm5-900/share/tm_moveit_config_tm5-900/rviz/: tm5_gazebo.rviz
ros2_ws/install/tm_moveit_config_tm5-900/share/tm_moveit_config_tm5-900/worlds/: arm_with_table.world
ros2_ws/install/tm_moveit_cpp_demo/share/tm_moveit_cpp_demo/: package.sh
ros2_ws/install/tm_msgs/include/tm_msgs/srv/: set_velocity.hpp
ros2_ws/install/tm_msgs/share/tm_msgs/: package.sh
ros2_ws/install/tm_msgs/share/tm_msgs/cmake/: ament_cmake_export_targets-extras.cmake  tm_msgsConfig.cmake  tm_msgs__rosidl_generator_cExport.cmake
ros2_ws/install/ui_for_debug_and_demo/lib/ui_for_debug_and_demo/: robot_ui
ros2_ws/install/ui_for_debug_and_demo/share/ui_for_debug_and_demo/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/tmr_ros2/custom_package/: CMakeLists.txt
ros2_ws/src/tmr_ros2/demo/: CMakeLists.txt
ros2_ws/src/tmr_ros2/demo/src/: demo_set_positions_handeye.cpp  demo_set_velocity.cpp
ros2_ws/src/tmr_ros2/robot_control/: CMakeLists.txt  package.xml
ros2_ws/src/tmr_ros2/robot_control/include/: gazebo_controller.h  polish_controller.h  sim_arm_controller.h  waypoint_planner.h
ros2_ws/src/tmr_ros2/robot_control/src/: gazebo_control.cpp  gazebo_controller.cpp  interface.cpp  joint2cart.cpp  memo.txt  no_waypoint.cpp  polish_controller.cpp  pub_tool0_state.cpp  sim_arm_controller.cpp  waypoint_planner.cpp
ros2_ws/src/tmr_ros2/robot_control/src/Code Tmeplates/: gazebo_controller (copy).cpp  kinematics.cpp  new_control.cpp  p2p.cpp  polish_controller (copy).cpp  sim_polish_controller.cpp  sim_polish_controller.h  txt_controller.cpp
ros2_ws/src/tmr_ros2/tm_description/xacro/: macro.gazebo_config_control.xacro  macro.internal_config.xacro  macro.tm5-900-nominal-ros2.urdf.xacro  macro.tm5-900-nominal.urdf.xacro  tm5-900-ros2.urdf.xacro
ros2_ws/src/tmr_ros2/tm_driver/: CMakeLists.txt
ros2_ws/src/tmr_ros2/tm_driver/launch/: tm5-900_bringup.launch.py
ros2_ws/src/tmr_ros2/tm_driver/rviz/: bringup.rviz
ros2_ws/src/tmr_ros2/tm_kinematics/: CMakeLists.txt
ros2_ws/src/tmr_ros2/tm_kinematics/src/: main.cpp  tm_jacob.cpp  tm_kin.cpp
ros2_ws/src/tmr_ros2/tm_moveit_config_tm5-900/: CMakeLists.txt  setup.cfg
ros2_ws/src/tmr_ros2/tm_moveit_config_tm5-900/config/: arm_controller_vel.yaml
ros2_ws/src/tmr_ros2/tm_moveit_config_tm5-900/launch/: gazebo.launch.py  spawn.launch.py  tm_bringup.launch.py
ros2_ws/src/tmr_ros2/tm_moveit_cpp_demo/launch/: tm5-900_run_moveit_cpp.launch.py
ros2_ws/src/tmr_ros2/tm_msgs/: CMakeLists.txt
ruckig/: CMakeLists.txt
ruckig/examples/: 1_position.cpp  CMakeLists-directory.txt
(+33 files in other folders)
